<resources>
    <string name="app_name">smart security app</string>
    <string name="security_system">Security System</string>
    <string name="alert_log">Alert Log</string>
    <string name="system_armed">System Armed</string>
    <string name="system_disarmed">System Disarmed</string>
    <string name="Login" >Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="user_icon">User Icon</string>
    <string name="lock_icon">Lock Icon</string>
    <string name="login_background">Login screen background</string>
    <string name="icon_description">Icon</string>


    <string name="Logswillappearhere">Logs will appear here</string>
    <string name="distance_text">Distance: %1$.2f cm</string>


    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>




</resources>